<resources>
    <string name="app_name">Project001</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_page_title">Настройка</string>
    <string name="mainWindowTite">Главная страница</string>
    <string name="championshipTeam1">Команда1</string>
    <string name="championshipTeam2">Команда2</string>
    <string name="date_time_hint">11:00</string>
    <string name="result_hint_title">Реультат</string>
    <string name="number_of_championship">Матч №</string>
</resources>
