<?xml version="1.0" encoding="utf-8"?>
<com.rafakob.drawme.DrawMeRelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:drawme="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="16dp"
        drawme:dm_radius="16dp"
        drawme:dm_stroke="4dp"
        drawme:dm_strokeColor="@color/stroke">

    <LinearLayout
            android:id="@+id/title"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TextView
            android:id="@+id/championshipPosition"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:hint="@string/number_of_championship"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/date_time"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title">
        <TextView
                android:id="@+id/date_time_text"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:hint="@string/date_time_hint"/>
    </LinearLayout>


    <RelativeLayout
            android:id="@+id/teamContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_time">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true">
        <TextView
                android:id="@+id/championshipTeam1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:hint="@string/championshipTeam1"
                />
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">
        <TextView
                android:id="@+id/championshipTeam2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:hint="@string/championshipTeam2"
                />
    </LinearLayout>
    </RelativeLayout>
    <LinearLayout
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/teamContainer">
        <TextView
                android:id="@+id/result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/result_hint_title"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</com.rafakob.drawme.DrawMeRelativeLayout>